--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,12 @@
-{{#each users as |user| }}
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-  </div>
-</div>
+{{!-- {{#each galleries as |gallery|}} --}}
+{{!-- {{> gallery-details}} --}}
+{{!-- {{/each}} --}}
+
+{{#if loggedIn}}
+  <p>Welcome {{user.username}}</p>
+
+{{/if}}
+
+{{#each galleries as |gallery|}}
+{{> gallery-details}}
 {{/each}}
