--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,3 @@
-{{!-- {{#each galleries as |gallery|}} --}}
-{{!-- {{> gallery-details}} --}}
-{{!-- {{/each}} --}}
-
-{{#if loggedIn}}
-  <p>Welcome {{user.username}}</p>
-
-{{/if}}
-
-{{#each galleries as |gallery|}}
-{{> gallery-details}}
+{{#each blogPosts as |blogPost|}}
+{{> blog-post-details}}
 {{/each}}
