--- a/views/partials/painting-details.handlebars
+++ b/views/partials/painting-details.handlebars
@@ -1,3 +1,5 @@
+{{!-- Rename and change to comment-details.hbar --}}
+
 <section class="card">
   <a href="/painting/{{id}}">
     <header>{{title}}</header>
