--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,14 +66,26 @@ nav a:hover {
   background-color: var(--dark);
 }
 
-.gallery {
+.blog {
   flex: 4;
   background-color: #fff;
   padding: 50px;
-  display: flex;
+  /* display: flex; */
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+}
+
+.row-custom {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  /* margin-left: -15px;
+  margin-right: -15px; */
+  margin: auto;
+  width: 700px;
+  height: 420px;
+  justify-content: center;
 }
 
 .btn-no-style {
@@ -92,7 +104,7 @@ img {
   height: auto;
 }
 
-.painting {
+.comment-fmt {
   width: 50%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -115,10 +127,19 @@ img {
   color: var(--dark);
 }
 
+.card-wide {
+  margin: 20px;
+  flex: 0 1 800px;
+  border: 7px double var(--dark);
+  border-radius: 10px;
+  background-color: var(--light);
+  color: var(--dark);
+}
+
 .login-card {
   margin: 0 0 20px 0;
-  flex: 0 0 50%;
-  max-width: 50%;
+  flex: 0 0 100%;
+  max-width: 100%;
   padding: 5px;
   border: 3px solid var(--dark);
   border-radius: var(--border-radius);
@@ -147,13 +168,22 @@ img {
   border-radius: 5px;
 }
 
+.card-wide header {
+  /* color: var(--light); */
+  font-weight: bold;
+  margin: 0;
+  /* background-color: var(--tertiary); */
+  padding: 0.625rem;
+  border-radius: 5px;
+}
+
 .card-body {
   font-size: 1.4rem;
   text-align: center;
   font-weight: bold;
 }
 
-.gallery-name {
+.blog-name {
   text-transform: uppercase;
   letter-spacing: 3px;
   text-shadow: 2px 2px 5px var(--secondary);
