--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,14 +1,22 @@
 <!-- Only if the user is logged in, render the painting content -->
 {{#if loggedIn}}
-  <section class="painting">
-    <img src="/images/{{painting.filename}}" alt="{{painting.description}}">
-    <div class="painting-details">
-      <h3>{{painting.title}}</h3>
-      <p>By: {{painting.artist}}</p>
-      <p>Exhibition open until: {{ format_date painting.exhibition_date}}</p>
-    </div>
-  </section>
-  {{else}}
-    <!-- Otherwise, provide a link to login -->
-    <a href="/login">Please login to see the paintings</a>
-  {{/if}}
+  {{#each blogPosts as |blogPost|}}
+    {{> blog-post-details}}
+    
+    
+    
+    {{!-- Left off here --}}
+    <a href="/addcomment">Add a comment</a>
+    
+    {{#each ???? as |????|}}
+      {{> comment-details}}
+    {{/each}}
+
+
+
+
+  {{/each}}
+{{else}}
+  <!-- Otherwise, provide a link to login -->
+  <a href="/login">Please login to see the paintings</a>
+{{/if}}
