--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,23 @@
-<div class="row justify-space-between-md">
+<div class="row-custom">
   <div class="login-card">
     <h2 class="page-title">Login</h2>
-    <form class="form login-form">
+    <form class="form" id="login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="user-login">Username</label>
+        <input class="form-input" type="text" id="user-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
+        <label for="password-login">Password</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login!</button>
       </div>
     </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
+    <a href="/signup">Sign up instead</a>
   </div>
 </div>
 
+{{!-- This sources login.js Javascript folder ./js relative to express.static 
+declaration for 'public' in the main server script. --}}
 <script src="./js/login.js"></script>
