--- a/views/partials/blog-post-details.handlebars
+++ b/views/partials/blog-post-details.handlebars
@@ -1,4 +1,4 @@
-<section class="card">
+<section class="card-wide">
   <a href="/blogpost/{{id}}">
     <header>
       <span>{{title}}</span>
@@ -9,5 +9,3 @@
     {{contents}}
   </section>
 </section>
-
-{{!-- <img src="/images/{{paintings.[0].filename}}" alt="{{paintings.[0].description}}" --}}
