challenge 14- added blog-post page with comment-detail partial, and route to render page. improved styling on every page. added link to create new comment

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,4 +1,4 @@
-<!-- Only if the user is logged in, render the painting content -->
+<!-- Only if the user is logged in, render the comments -->
 {{#if loggedIn}}
   {{#each blogPosts as |blogPost|}}
     {{> blog-post-details}}
