--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Museum</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -18,7 +18,8 @@
     {{!-- <a id="logout-link" href="/" target="_blank">Logout</a> --}}
   </nav>
   <section>
-    <h1 class="card-new header">The Tech Blog</h1>
+    {{!-- <h1 class="card-new header">The Tech Blog</h1> --}}
+    <h1 class="color-light">The Tech Blog</h1>
   </section>
   <main>
     <section class="blog">
