--- a/views/partials/blog-post-details.handlebars
+++ b/views/partials/blog-post-details.handlebars
@@ -1,6 +1,6 @@
 <section class="card-wide">
   <a href="/blogpost/{{id}}">
-    <header>
+    <header class="space-between">
       <span>{{title}}</span>
       <span>Posted by {{user_name}} on {{ format_date post_date }}</span>
     </header>
