--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,13 @@
   --quatrinary: #6c6b67;
   --light: #e3e4e3;
   --dark: #182c23;
+  --link: #0000ee;
   --error: rgb(228, 46, 1);
   --border-radius: 0.3rem;
 }
 
 body {
   font-family: Arial;
-  margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -52,6 +52,7 @@ aside {
 nav {
   display: flex;
   background-color: var(--secondary);
+  color: var(--light);
 }
 
 nav a {
@@ -76,12 +77,24 @@ nav a:hover {
   align-items: center;
 }
 
+.color-light {
+  color: var(--light);
+}
+
+.color-link {
+  color: var(--link);
+}
+
+.space-between {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
 .row-custom {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  /* margin-left: -15px;
-  margin-right: -15px; */
   margin: auto;
   width: 700px;
   height: 420px;
@@ -136,6 +149,17 @@ img {
   color: var(--dark);
 }
 
+.card-wide header {
+  font-weight: bold;
+  margin: 0;
+  padding: 0.625rem;
+  border-radius: 5px;
+}
+
+.font-normal {
+  font-weight: normal;
+}
+
 .login-card {
   margin: 0 0 20px 0;
   flex: 0 0 100%;
@@ -149,6 +173,12 @@ img {
   color: var(--light);
 }
 
+.row-margin {
+  margin: 10px;
+  border: 2px solid var(--dark);
+  border-radius: 5px;
+}
+
 .card header {
   color: var(--light);
   font-weight: bold;
@@ -160,16 +190,7 @@ img {
 }
 
 .card-new header {
-  /* color: var(--light); */
-  font-weight: bold;
-  margin: 0;
-  /* background-color: var(--tertiary); */
-  padding: 0.625rem;
-  border-radius: 5px;
-}
-
-.card-wide header {
-  /* color: var(--light); */
+  color: var(--light);
   font-weight: bold;
   margin: 0;
   /* background-color: var(--tertiary); */
