--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -1,30 +1,39 @@
-<section class="container">
-  <h3 class="gallery-name">{{gallery.name}}</h3>
-  <h4>Opening Hour: {{format_time gallery.starting_date}}</h4>
-  <h4>Closing Hour: {{format_time gallery.ending_date}}</h4>
-  <!-- Only if the user is logged in, render the gallery's paintings -->
-  {{#if loggedIn}}
-    <section class="flex-row justify-center">
-      {{#each gallery.paintings as |painting|}}
-        {{> painting-details}}
-      {{/each}}
+<section class="card-wide">
+  <header class="space-between">
+    <span>{{blogPost.title}}</span>
+    <span>Posted by {{blogPost.user_name}} on {{ format_date blogPost.post_date }}</span>
+  </header>
+  <section>
+    {{blogPost.contents}}
   </section>
-  {{else}}
-  <!-- Otherwise, provide a link to login -->
-    <a href="/login">Please login to see the paintings</a>
-  {{/if}}
 </section>
 
-{{!-- <section class="container">
-  <h3 class="gallery-name">{{gallery.name}}</h3>
-  <h4>Opening Hour: {{format_time gallery.starting_date}}</h4>
-  <h4>Closing Hour: {{format_time gallery.ending_date}}</h4>
-  <!-- Only if the user is logged in, render the gallery's paintings -->
-  <section class="flex-row justify-center">
-    {{#each gallery.paintings as |painting|}}
-    {{> painting-details}}
-    {{/each}}
-  </section>
+<section class="card-wide">
+  <p>
+    <span class="color-light">..</span>
+    <span>
+      <a class="color-link" href="/blogpostcomment/{{id}}">Enter new comment</a>
+    </span>
+  </p>
+  {{#each blogPost.comments as |comment|}}
+    {{> comment-details}}
+  {{/each}}
+</section>
 
-  <!-- Otherwise, provide a link to login -->
-</section> --}}
+
+
+{{!-- <section class="container"> --}}
+  {{!-- <h3 class="blog-name">{{blogPost.name}}</h3> --}}
+  {{!-- <!-- Only if the user is logged in, render the blogPost's paintings --> --}}
+  {{!-- {{#if loggedIn}} --}}
+    {{!-- <section class="flex-row justify-center"> --}}
+      {{!-- {{#each blogPost.comments as |comment|}} --}}
+        {{!-- {{> comment-details}} --}}
+        {{!-- <section>This is a comment</section> --}}
+      {{!-- {{/each}} --}}
+  {{!-- </section> --}}
+  {{!-- {{else}} --}}
+  {{!-- <!-- Otherwise, provide a link to login --> --}}
+    {{!-- <a href="/login">Please login to see the comments</a> --}}
+  {{!-- {{/if}} --}}
+{{!-- </section> --}}
