--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="row-custom">
   <div class="login-card">
-    <h2 class="page-title">Login</h2>
+    <h2>Login</h2>
     <form class="form" id="login-form">
       <div class="form-group">
         <label for="user-login">Username</label>
