--- a/views/partials/blog-post-details.handlebars
+++ b/views/partials/blog-post-details.handlebars
@@ -5,7 +5,7 @@
       <span>Posted by {{user_name}} on {{ format_date post_date }}</span>
     </header>
   </a>
-  <section>
+  <section class="margin-text">
     {{contents}}
   </section>
 </section>
