--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -971,7 +971,8 @@ a:hover {
 
 .btn {
   text-align: center;
-  display: inline-block;
+  /* display: inline-block; */
+  display: block;
   padding: 0.5rem 1.2rem;
   margin: 0;
   text-decoration: none;
@@ -1135,17 +1136,19 @@ form select {
 form label,
 form .form-label {
   display: inline-block;
-  font-size: 1.2rem;
-  margin: 0.625rem 0 0.25rem 0.3rem;
+  /* font-size: 1.2rem; */
+  /* margin: 0.625rem 0 0.25rem 0.3rem; */
 }
 
 form .form-input {
-  width: 100%;
+  /* width: 100%; */
+  width: 95%;
   padding: 0.75rem;
   color: #1a1a1a;
   background-color: #ffffff;
-  margin: 0.625rem 0;
-  font-size: 1.2rem;
+  /* margin: 0.625rem 0; */
+  margin: 0.625rem auto;
+  /* font-size: 1.2rem; */
   border: 1px solid #484848;
   border-radius: 0.3rem;
 }
