--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -3,7 +3,7 @@
     <span>Comment {{incr @index}}</span>
     <span class="font-normal">... made by {{user_name}} on {{ format_date comment_date }}</span>
   </header>
-  <section>
+  <section class="margin-text">
     {{comment_text}}
   </section>
 </section>
