--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <div class="row-custom">
   <div class="login-card">
-    <h2 class="page-title">Sign Up</h2>
+    <h2>Sign Up</h2>
     <form class="form" id="signup-form">
       <div class="form-group">
         <label for="user-signup">Username</label>
