--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -1,3 +1,7 @@
+<section>
+    <h1 class="color-light">The Tech Blog</h1>
+</section>
+
 <section class="card-wide">
   <header class="space-between">
     <span>{{blogPost.title}}</span>
