--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,7 @@
+<section>
+    <h1 class="color-light">The Tech Blog</h1>
+</section>
+
 {{#each blogPosts as |blogPost|}}
     {{> blog-post-details}}
 {{/each}}
