--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,14 @@
 <body>
   <nav>
     <a href="/">Home</a>
-    <a href="/dashboard">Dashboard</a>
+    <a href="/dashboardblogpost">Dashboard</a>
     <a href="/login">Login</a>
     <a id="logout-link" href="/">Logout</a>
-    {{!-- <a id="logout-link" href="/" target="_blank">Logout</a> --}}
+    {{!-- <a id="logout-link" href="/" target="_blank">Logout</a> Opens another tab --}}
   </nav>
-  <section>
-    {{!-- <h1 class="card-new header">The Tech Blog</h1> --}}
-    <h1 class="color-light">The Tech Blog</h1>
-  </section>
+  {{!-- <section> --}}
+    {{!-- <h1 class="color-light">The Tech Blog</h1> --}}
+  {{!-- </section> --}}
   <main>
     <section class="blog">
       {{{body}}}
