--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,7 @@
+<section>
+    <h1 class="color-light">The Tech Blog</h1>
+</section>
+
 <div class="row-custom">
   <div class="login-card">
     <h2>Sign Up</h2>
