--- a/views/dashboard-blog-post.handlebars
+++ b/views/dashboard-blog-post.handlebars
@@ -3,9 +3,9 @@
 </section>
 
 {{#if loggedIn}}
-    <a class="color-link margin-text-wide" href="/newblogpost">Enter new blog post</a>
+    <a class="color-link margin-text-extra-wide" href="/newblogpost">Enter new blog post</a>
 {{else}}
-    <p class="margin-text-wide font-size-normal">Your Blog Posts</p>
+    <p class="margin-text-extra-wide font-size-normal">Your Blog Posts</p>
 {{/if}}
 
 {{#each blogPosts as |blogPost|}}
