--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,6 +22,6 @@
   </div>
 </div>
 
-{{!-- This sources login.js Javascript folder ./js relative to express.static 
-declaration for 'public' in the main server script. --}}
+{{!-- This sources login.js Javascript folder; ./js relative to express.static 
+declaration for 'public'. --}}
 <script src="./js/login.js"></script>
