--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -12,7 +12,7 @@
   </section>
 </section>
 
-<section class="card-wide">
+<section class="card-wide height-fixed">
   {{#if loggedIn}}
     <a class="color-link margin-text-wide" href="/blogpostcomment/{{blogPost.id}}">Enter new comment</a>
   {{else}}
