--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,6 +22,6 @@
   </div>
 </div>
 
-{{!-- This sources login.js Javascript folder ./js relative to express.static 
-declaration for 'public' in the main server script. --}}
+{{!-- This sources signup.js Javascript folder; ./js relative to express.static 
+declaration for 'public'. --}}
 <script src="./js/signup.js"></script>
