--- a/views/new-blog-post.handlebars
+++ b/views/new-blog-post.handlebars
@@ -18,7 +18,7 @@
         </div>
         {{!-- Hidden section - used for storing passed data - Has to be part of the form --}}
         <div class="hidden-passed-data">
-          <p class="form-group">{{activeUser}}</p>
+          <p id="post-username" class="form-group">{{activeUser}}</p>
         </div>
       </form>
     </section>
@@ -30,4 +30,4 @@
 
 {{!-- This sources dashboard-blog-post.js Javascript folder. Relative to express.static 
 declaration for 'public'. --}}
-<script src="/js/dashboard-blog-post.js"></script>
+<script src="/js/new-blog-post.js"></script>
