--- a/views/blog-post-comment.handlebars
+++ b/views/blog-post-comment.handlebars
@@ -27,8 +27,8 @@
           <button class="btn btn-primary btn-wide" type="submit">Submit</button>
         </div>
         <div class="hidden-passed-data">
-          <p class="form-group">{{activeUser}}</p>
-          <p class="form-group">{{blogPost.id}}</p>
+          <p id="comm-username" class="form-group">{{activeUser}}</p>
+          <p id="comm-blogid" class="form-group">{{blogPost.id}}</p>
         </div>
       </form>
     </section>
