challenge 14- created new route paths and reorganized routes so they are better organized and standard. ex. added /blogs and /dashboard route extensions

--- a/views/blog-post-comment.handlebars
+++ b/views/blog-post-comment.handlebars
@@ -35,7 +35,7 @@
   </section>
 {{else}}
   <!-- Otherwise, provide a link to login -->
-  <a class="color-link margin-text-wide" href="/login">Click here to login to enter comment.</a>
+  <a class="color-link margin-text-wide" href="/api/users/login">Click here to login to enter comment.</a>
 {{/if}}
 
 {{!-- This sources login.js Javascript folder ./js relative to express.static 
