--- a/views/dashboard-blog-post.handlebars
+++ b/views/dashboard-blog-post.handlebars
@@ -3,7 +3,7 @@
 </section>
 
 {{#if loggedIn}}
-    <a class="color-link margin-text-extra-wide" href="/newblogpost">Enter new blog post</a>
+    <a class="color-link margin-text-extra-wide" href="/api/dashboard/newblogpost">Enter new blog post</a>
 {{else}}
     <p class="margin-text-extra-wide font-size-normal">Your Blog Posts</p>
 {{/if}}
