--- a/views/edit-delete-blog-post.handlebars
+++ b/views/edit-delete-blog-post.handlebars
@@ -25,7 +25,7 @@
   </section>
 {{else}}
   <!-- Otherwise, provide a link to login -->
-  <a class="color-link margin-text-wide" href="/login">Click here to login to edit or delete blog post.</a>
+  <a class="color-link margin-text-wide" href="/api/users/login">Click here to login to edit or delete blog post.</a>
 {{/if}}
 
 {{!-- This sources dashboard-blog-post.js Javascript folder. Relative to express.static 
