--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,10 +18,10 @@
         <button class="btn btn-primary" type="submit">Login!</button>
       </div>
     </form>
-    <a href="/signup">Sign up instead</a>
+    <a href="/api/users/signup">Sign up instead</a>
   </div>
 </div>
 
 {{!-- This sources login.js Javascript folder; ./js relative to express.static 
 declaration for 'public'. --}}
-<script src="./js/login.js"></script>
+<script src="/js/login.js"></script>
