--- a/views/partials/dashboard-blog-post-details.handlebars
+++ b/views/partials/dashboard-blog-post-details.handlebars
@@ -1,5 +1,5 @@
 <section class="card-wide">
-  <a href="/editdeleteblogpost/{{id}}">
+  <a href="/api/dashboard/editdeleteblogpost/{{id}}">
     <header class="space-between">
       <span>{{title}}</span>
       <span>Posted by {{user_name}} on {{ format_date post_date }}</span>
