--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,10 +18,10 @@
         <button class="btn btn-primary" type="submit">Sign Up!</button>
       </div>
     </form>
-    <a href="/login">Login instead</a>
+    <a href="/api/users/login">Login instead</a>
   </div>
 </div>
 
 {{!-- This sources signup.js Javascript folder; ./js relative to express.static 
 declaration for 'public'. --}}
-<script src="./js/signup.js"></script>
+<script src="/js/signup.js"></script>
