--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,11 +4,12 @@
 
 {{#if loggedIn}}
     <p class="margin-text-extra-wide font-size-normal">
-        You are logged in. Comment on blog posts or work in your Dashboard.
+        You are logged in. Click on blog posts to comment on them, or work in your Dashboard.
     </p>
 {{else}}
     <p class="margin-text-extra-wide font-size-normal">
-        Click on blog post to view comments. Login to enter comments or work in your Dashboard.
+        <span class="font-bold">Click</span> on blog post to view comments. 
+        <span class="font-bold">Login</span> to enter comments or work in your Dashboard.
     </p>
 {{/if}}
 
